--- a/README
+++ b/README
@@ -1,10 +1,1 @@
-<<<<<<< HEAD
-still trying to tune the repo
-
-dfd
-=======
-zcvvzCXv
-
-cv
-b
->>>>>>> 2bc73ce13fec6e30f675f8eb24de8e86826d1460
+Looks like finally i'm done!
